--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="#AFA7EF"
-         >
+        android:background="#AFA7EF" >
 
         <TextView
             android:id="@+id/textHID"
@@ -32,10 +31,7 @@
             android:text="ID         Ime  BrIndexa Grad Adresa JMBG             Pol       Rodjen"
             android:textColor="#000000"
             android:textSize="20sp" />
-        
-        </RelativeLayout>
-    
-    
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/footer"
@@ -46,41 +42,19 @@
         android:gravity="center" >
 
         <Button
-        android:id="@+id/btnButtonSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:onClick="PokreniDugmeSearch"/>
- 
-    <Button
-        android:id="@+id/btnButtonDodaj"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:layout_toRightOf="@+id/btnButtonSearch"
-        android:onClick="PokreniDugme"/>
-    
-    
-    <Button
-        android:id="@+id/btnButtonUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Update"
-        android:layout_toRightOf="@+id/btnButtonDodaj"
-        android:onClick="DugmeUpdate"/>
- 
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:layout_toRightOf="@+id/btnButtonUpdate"
-        android:onClick="Delete"/>
-    	
-    
-    
-    </RelativeLayout>
+            android:id="@+id/btnButtonSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="PokreniDugmeSearch"
+            android:text="Search" />
 
-    
+        <Button
+            android:id="@+id/btnButtonDodaj"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/btnButtonSearch"
+            android:onClick="PokreniDugme"
+            android:text="Add" />
+    </RelativeLayout>
 
 </RelativeLayout>
