--- a/res/layout/activity_search_student_main.xml
+++ b/res/layout/activity_search_student_main.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.studentaplikacija.SearchStudentMainActivity" >
+    tools:context="com.example.studentaplikacija.SearchStudentMainActivity"
+    android:background="@drawable/search2" >
 
     <EditText
         android:id="@+id/txtID"
@@ -24,9 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtID"
-        android:layout_marginLeft="31dp"
-        android:layout_marginTop="62dp"
-        android:text="@string/searchIdText">
+        android:text="@string/searchIdText"
+        android:textColor="#ff0000"
+        android:textSize="25px">
          </TextView>
     
     <Button
